--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "bluebird": "3.3.3",
     "glob": "7.0.0",
-    "mkdirp": "0.5.1"
+    "mkdirp": "0.5.1",
+    "typescript": "^2.1.4"
   },
   "devDependencies": {
     "dojo-loader": ">=2.0.0-beta.5",
